# diagnostic_signal

./: CMakeCache.txt.prev  CMakeLists.txt  SignalWIndows.h  cmake_install.cmake  device_simulator.cpp  device_simulator.h  devicesimulator.cpp  devicesimulator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.ini  paramswindows.cpp  paramswindows.h  paramswindows.ui  qtcsettings.cmake  signalwindows.cpp  signalwindows.h  signalwindows.ui
.cmake/api/v1/reply/: cache-v2-dd3e4a1de322158114b3.json  cmakeFiles-v1-44919398f2c492a8bf25.json  codemodel-v2-b0463e1081ff60060c1e.json  index-2025-08-04T10-26-10-0979.json  target-diagnostic_mal_Med-Debug-ab76d92f2655c97e54a4.json  target-diagnostic_mal_Med_autogen-Debug-da912f1a547d085abf9d.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: algorithmfwd.h.B52ADC7A074104CF.idx  cmath.58353567A3799D69.idx  exception.h.60232BC787A23EFB.idx  fftw3.h.B1E37DF1F6F7519D.idx  limits.507F66A5F268FCAA.idx  main.cpp.711589C9921C58DE.idx  mainwindow.cpp.512090313FCD2BDF.idx  mainwindow.h.B5382F9665CBB5AA.idx  math.h.DE4D39AAF5AC2C76.idx  move.h.82CE505FF4CFACB8.idx  paramswindows.cpp.AE50C71250E58E79.idx  paramswindows.h.584291FDC8AC7415.idx  qcustomplot.cpp.E7D4BCBDBEF9352A.idx  qcustomplot.h.F6FE2E76256B59CA.idx  signalwindows.cpp.3ED6C9DDBDEA80B9.idx  signalwindows.h.0261776F7E628247.idx  stddef.h.B10142B5B6E10391.idx  stdio.h.6919C07CB89D47AD.idx  stl_algo.h.336B2A99E112B831.idx  stl_algobase.h.555E5AB59D1CE434.idx  stl_iterator.h.70D88ADB523A155E.idx  stl_iterator_base_types.h.1C2D9B2B05C1363B.idx  stl_pair.h.33E007C18AD1880F.idx  stl_tempbuf.h.1CFD178B11157DBE.idx  type_traits.DE435E04D8184E0C.idx  uniform_int_dist.h.C54B19F2B43B693B.idx  (+1 more)
